terraform/k8s/modules/containers/status_page/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uptime-kuma
  name: uptime-kuma-service
  namespace: uptime-kuma
spec:
  ports:
  - name: http
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: uptime-kuma
    component: uptime-kuma
  type: ClusterIP
