terraform/k8s/modules/containers/status_page/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header   Upgrade $http_upgrade;
        proxy_cache_bypass $http_upgrade;
        }
  labels:
    app: uptime-kuma
  name: uptime-kuma-ingress
  namespace: uptime-kuma
spec:
  rules:
  - host: status${STATUS_PAGE_HOSTNAME}.feyre.io
    http:
      paths:
      - backend:
          service:
            name: uptime-kuma-service
            port:
              number: 3001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - status${STATUS_PAGE_HOSTNAME}.feyre.io
    secretName: feyre${STATUS_PAGE_HOSTNAME}-io-tls
