terraform/k8s/modules/containers/status_page/stack.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uptime-kuma
  name: uptime-kuma-service
  namespace: uptime-kuma
spec:
  ports:
  - name: http
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: uptime-kuma
    component: uptime-kuma
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: uptime-kuma
    component: uptime-kuma
  name: uptime-kuma-deployment
  namespace: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
      component: uptime-kuma
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: uptime-kuma
        component: uptime-kuma
    spec:
      containers:
      - image: ${ACR_NAME}.azurecr.io/status_page:${IMAGE_TAG}
        livenessProbe:
          exec:
            command:
            - node
            - extra/healthcheck.js
          initialDelaySeconds: 180
          periodSeconds: 60
          timeoutSeconds: 30
        name: app
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: /
            port: 3001
            scheme: HTTP
        resources:
          limits:
            cpu: "0.5"
            memory: 500Mi
          requests:
            cpu: "0.25"
            memory: 50Mi
        volumeMounts:
        - mountPath: /app/data
          name: storage
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: uptime-kuma-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header   Upgrade $http_upgrade;
        proxy_cache_bypass $http_upgrade;
        }
  labels:
    app: uptime-kuma
  name: uptime-kuma-ingress
  namespace: uptime-kuma
spec:
  rules:
  - host: status${STATUS_PAGE_HOSTNAME}.feyre.io
    http:
      paths:
      - backend:
          service:
            name: uptime-kuma-service
            port:
              number: 3001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - status${STATUS_PAGE_HOSTNAME}.feyre.io
    secretName: feyre${STATUS_PAGE_HOSTNAME}-io-tls
